# GitRobot

./: CMakeLists.txt  Cod_MainAndOpenCV.txt  README.md  State_diagramm  concept model  diagrammaClass  Отчет_АрхитектураИС.docx
Ishodniki/: Cod_MainAndOpenCV.cpp  main.cpp  open.cpp  state.cpp
codeDiagramm/: usecase
Архитектура ИС/: Практическая работа.docx
Диаграммы и таблицы/: Backlog.xlsx
